--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,33 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <packaging>jar</packaging>
   <groupId>de.sbs.fswi1</groupId>
   <artifactId>studentenverwaltung2324</artifactId>
   <version>1.0-SNAPSHOT</version>
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.21</maven.compiler.source>
-    <maven.compiler.target>1.21</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
  
+ <dependencies>
+  <dependency>
+    <groupId>com.github.Milchreis</groupId>
+    <artifactId>UiBooster</artifactId>
+    <version>1.20.1</version>
+  </dependency>
+  <dependency>
+    <groupId>de.sbs.fswi1</groupId>
+    <artifactId>dao2324</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </dependency>
+ </dependencies>
+ <repositories>
+  <repository>
+    <id>jitpack.io</id>
+    <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
 </project>
+
